# snes9x_esp32

./: .gitignore  CMakeLists.txt  README.md  flashapp.sh  flashrom.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp_lcd/dsi/: esp_lcd_panel_dpi.c
components/lcddrv/: CMakeLists.txt  esp_lcd_ek79007.c
components/lcddrv/include/: esp_lcd_ek79007.h
components/snes9x/: CMakeLists.txt  LICENSE  gfx.c  memmap.c  memmap.h  save.c  save.h  soundux.c  tile.h
main/: CMakeLists.txt  main.cpp  pad.cpp  pad.h
roms/: README.md
